# streamlit_mock

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
scripts/: docker-build.sh
src/: main.py
src/app/: app.py  logic.py
src/config/: config.py
src/db/: base.py  model.py
src/services/: __init__.py  db_service.py
src/utils/: __init__.py  log.py  mock_data.py
tests/: test_config_settings.py  test_db_base.py
